# terrarium-annotator

./: .gitignore  AGENTS.md  README.md  SPEC.md  how to use banished.db.txt  initial_prompt.txt  pyproject.toml  pytest.ini
.opencode/: opencode.json
docs/: ARCHITECTURE.md  INTERFACES.md  ONBOARDING.md  ROADMAP.md  SCHEMA.md  TOOLS.md
docs/adr/: 001-sqlite-over-json.md  README.md
docs/worklog/: 000-template.md  2026-01-02-f0-storage-layer.md  2026-01-02-f1-corpus-layer.md  2026-01-02-f2-context-layer.md  2026-01-03-tier05-chunk-compaction.md  README.md
src/terrarium_annotator/: __init__.py  agent_client.py  cli.py  codex.py  context.py  corpus.py  curator.py  runner.py  state.py
src/terrarium_annotator/context/: __init__.py  annotation.py  compactor.py  compat.py  metrics.py  models.py  prompts.py  summarizer.py  token_counter.py
src/terrarium_annotator/corpus/: __init__.py  batcher.py  models.py  reader.py
src/terrarium_annotator/exporters/: __init__.py  base.py  json_exporter.py  yaml_exporter.py
src/terrarium_annotator/storage/: __init__.py  base.py  exceptions.py  glossary.py  migrations.py  revisions.py  snapshots.py  state.py
src/terrarium_annotator/tools/: __init__.py  corpus_tools.py  dispatcher.py  exceptions.py  glossary_tools.py  result.py  schemas.py  snapshot_tools.py  (+1 more)
tests/: conftest.py  test_codex.py  test_compactor.py  test_context.py  test_corpus.py  test_curator.py  test_exporters.py  test_inspect.py  test_integration.py  test_runner.py  test_snapshot_tools.py  test_snapshots.py  test_storage.py  test_summarizer.py  test_tools.py
